Bug 386226 - "~" character not recognized in localfile entry
Summary: "~" character not recognized in localfile entry
Status: RESOLVED FIXED
Alias: None
Product: KBibTeX
Classification: Applications
Component: Loading/saving files (other bugs)
Version First Reported In: git (master)
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-26 23:50 UTC by Arnout Boelens
Modified: 2017-10-29 19:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-17333-0.html (2.20 KB, text/html)
2017-10-28 21:55 UTC, Arnout Boelens
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arnout Boelens 2017-10-26 23:50:55 UTC
I have pdf files linked to my bibtex file using the localfile entry. This version of kbibtex does not recognize the "~" character anymore, so the links to all my pdf files are broken. (I use the "~" so I can use the same bib file on different computers where I have different usernames and thus different home directory names)
Comment 1 Thomas Fischer 2017-10-27 20:04:26 UTC
I have prepared two commits that should fix your issue:
https://commits.kde.org/kbibtex/0b6ad80eb56e5e96cd9b4b
https://commits.kde.org/kbibtex/e928f7b2f64dc21c4b7cef

Both commits are at the head of bug branch 'bugs/kde386226' in KBibTeX's Git repository:
https://cgit.kde.org/kbibtex.git/log/?h=bugs/kde386226

Please checkout this code and confirm that your issue has been solved.
Comment 2 Arnout Boelens 2017-10-28 21:55:03 UTC
Created attachment 108615 [details]
attachment-17333-0.html

Thanks for the quick fix. I just checked out the the code and the issue has
been fixed.

On Fri, Oct 27, 2017 at 1:04 PM Thomas Fischer <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=386226
>
> Thomas Fischer <fischer@unix-ag.uni-kl.de> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>             Version|unspecified                 |git (master)
>              Status|UNCONFIRMED                 |ASSIGNED
>      Ever confirmed|0                           |1
>       Latest Commit|
> |0b6ad80eb56e5e96cd9b4bbd69c
>                    |                            |b9a2bae42e0f8
>
> --- Comment #1 from Thomas Fischer <fischer@unix-ag.uni-kl.de> ---
> I have prepared two commits that should fix your issue:
> https://commits.kde.org/kbibtex/0b6ad80eb56e5e96cd9b4b
> https://commits.kde.org/kbibtex/e928f7b2f64dc21c4b7cef
>
> Both commits are at the head of bug branch 'bugs/kde386226' in KBibTeX's
> Git
> repository:
> https://cgit.kde.org/kbibtex.git/log/?h=bugs/kde386226
>
> Please checkout this code and confirm that your issue has been solved.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Thomas Fischer 2017-10-29 19:28:13 UTC
Git commit 9d98967252e8e27f44fd939ff6bd53399bd904a2 by Thomas Fischer.
Committed on 29/10/2017 at 19:27.
Pushed by thomasfischer into branch 'master'.

Keep tilde symbol in verbatim text

Do not replace a tile symbol (~) with a non-breaking space in
verbatim text.

This behavior is necessary, for example, for 'localfile' fields
where the value is '~/document.pdf' or 'document.pdf~' in a
VerbatimText object.

M  +6    -2    src/data/value.cpp

https://commits.kde.org/kbibtex/9d98967252e8e27f44fd939ff6bd53399bd904a2