Keep tilde symbol in verbatim text

Do not replace a tile symbol (~) with a non-breaking space in
verbatim text.

This behavior is necessary, for example, for 'localfile' fields
where the value is '~/document.pdf' or 'document.pdf~' in a
VerbatimText object.

BUG: 386226